--- a/css/master.css
+++ b/css/master.css
@@ -14,7 +14,7 @@ h6{font-size: 0.9rem;}
   color: green;
 }
 .lae-info{
-  color: blue;
+  color: skyblue;
 }
 .lae-warning{
   color: orange;
@@ -27,13 +27,17 @@ color: red;
   margin-left: 0.5rem;
 }
 
+.lae-air-r-05{
+  margin-right: 0.5rem;
+}
+
 .lae-flex{
   display: flex;
 }
 
 .lae-viewport{
   height: 100vh;
-  width: 99vw;
+  max-width: 90vw;
   position: relative;
   top: 0px;
   left: 0px;
@@ -53,6 +57,7 @@ border: solid 1px black;
   width: 5rem;
   height: 100%;
   color: #d5dae6;
+  border: solid 1px black;
 }
 .lae-main{
   position: relative;
@@ -72,12 +77,4 @@ body{
 
 .lae-secondary{
   background-color: #585858;
-}
-.navbar-1{
-    background-color: red;
-    color: black;
-    border: solid 1px;
-    justify-content: center;
-    height: 5%;
-    text-align: center;
 }
