--- a/css/master.css
+++ b/css/master.css
@@ -142,7 +142,7 @@ body{
 
 
 /* border's end* /
-  /* Padding start */
+/* Padding start */
 
 .padding-0 {
     padding: 0;
@@ -157,3 +157,9 @@ body{
 }
 
 /* Padding end */
+/* Containers */
+.container {
+    width: 80vw;
+    box-shadow: 5px 5px 5px black;
+
+}
