--- a/css/master.css
+++ b/css/master.css
@@ -52,16 +52,6 @@ a{text-decoration: none; color: #d5dae6; }
   left: 0px;
 }
 
-.navbar{
-position: fixed;
-top: 0px;
-left: 0px;
-width: 100%;
-min-height: 6rem;
-max-height: 6rem;
-border: solid 1px black;
-z-index: 1;
-}
 .sidebar{
   position: fixed;
   left: 0px;
@@ -84,39 +74,30 @@ body{
 .margin-10 {
     margin: 0.1em;
 }
-
 .margin-20 {
     margin: 0.2em;
 }
-
 .margin-50 {
     margin: 0.5em;
 }
-
 .margin-100 {
     margin: 1em;
 }
-
 .margin-150 {
     margin: 1.5em;
 }
-
 .margin-200 {
     margin: 2em;
 }
-
 .margin-0 {
     margin: 0em;
 }
-
 .margin-auto {
     margin: auto;
 }
-
 /* Margin's end */
 
 /* border's start */
-
 .border-001-solid {
   border: solid 0.01em;
 }
@@ -126,7 +107,6 @@ body{
 .border-02-solid {
     border: solid 0.2em;
 }
-
 
 .border-001-dashed {
   border: dashed 0.01em;
@@ -138,7 +118,6 @@ body{
     border: dashed 0.2em;
 }
 
-
 .border-001-ridge {
   border: ridge 0.01em;
 }
@@ -149,35 +128,36 @@ body{
     border: ridge 0.2em;
 }
 
-
-
 /* border's end* /
 /* Padding start */
 
 .padding-0 {
     padding: 0;
 }
-
 .padding-1 {
     padding: 1em;
 }
-
 .padding-01 {
     padding: 0.1em;
 }
 
 /* Padding end */
 /* Shadow start */
+
 .shadow {
   box-shadow: 5px 5px 5px black;
 }
+
 /* Shadow end */
 /* Containers start */
+
 .container {
     width: 80vw;
 }
+
 /* Container end */
 /* Nav start */
+
 nav{
   position: relative;
   top: 0px;
@@ -185,8 +165,23 @@ nav{
   background-color: black;
   width: 100%;
 }
+.navbar-margin{
+  margin-top: 6.1rem;
+}
+.navbar{
+position: fixed;
+top: 0px;
+left: 0px;
+width: 100%;
+min-height: 6rem;
+max-height: 6rem;
+border: solid 1px black;
+z-index: 1;
+}
+
 /* Nav end */
 /* Text-alignment start */
+
 .text-left{
   text-align: left;
 }
@@ -196,55 +191,51 @@ nav{
 .text-right{
   text-align: right;
 }
+
 /*text-alignment end*/
 /* dropdown start */
+
 .dropdown {
   position: relative;
   display: inline-block;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px black;
   padding: 12px 16px;
   z-index: 1;
 }
-
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
 /* dropdown end */
+/* sections  start|*/
+
 .cat{
 width: 100%;
     height: 100%;
     min-height: 260px;
     background-position: 50% 50%;
     background-size: auto 30%;
-  }
-  .section {
-    display: block;
-    box-sizing: border-box;
+}
+.section {
     height: 50vh;
     width: 100%;
     min-height: 260px;
-    position: relative;
     text-align: center;
-    background: #FFF;
 }
-  .section:nth-child(odd) .cat {
+.section:nth-child(odd) .cat {
       background-color: #fff !important;
-  }
-  .section:nth-child(even) .cat {
+}
+.section:nth-child(even) .cat {
     background-color: #eee !important;
 }
-  .content-main {
+.content-main {
       height: 100%;
       width: 100%;
-  }
-.navbar-margin{
-  margin-top: 6.1rem;
 }
 .section h1, .section h2, .section h3, .section p {
   display: inline-block;
@@ -254,3 +245,5 @@ width: 100%;
   font-size: 16px;
   line-height: 1.4em;
 }
+
+/* sections end */
