--- a/css/master.css
+++ b/css/master.css
@@ -68,6 +68,9 @@ a{text-decoration: none; color: #d5dae6; }
 body{
   top: 0px;
 }
+ul{
+
+}
 /* Layout end */
 /* Margin's start */
 
@@ -99,7 +102,7 @@ body{
 
 /* border's start */
 .border-001-solid {
-  border: solid 0.01em;
+  border: solid 0.01em black;
 }
 .border-01-solid {
     border: solid 0.1em;
@@ -166,7 +169,7 @@ nav{
   width: 100%;
 }
 .navbar-margin{
-  margin-top: 6.1rem;
+  margin-top: 5.1rem;
 }
 .navbar{
 position: fixed;
@@ -242,8 +245,6 @@ width: 100%;
   top: 50%;
   margin: 0px auto;
   position: relative;
-  font-size: 16px;
-  line-height: 1.4em;
 }
 
 /* sections end */
