EoD, need to link .PDF in /prosjekt + MATLAB

--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,5 @@
 h1{font-size: 2rem;}
-h2{font-size: 1.7rem;}
+h2{font-size: 2rem;}
 h3{font-size: 1.5rem;}
 h4{font-size: 1.2rem;}
 h5{font-size: 1rem;}
@@ -158,6 +158,15 @@ ul{
     width: 80vw;
 }
 
+.button {
+  background-color: #373f52;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border:2px solid black;
+}
+
 /* Container end */
 /* Nav start */
 
@@ -169,7 +178,7 @@ nav{
   width: 100%;
 }
 .navbar-margin{
-  margin-top: 5.1rem;
+  margin-top: 6rem;
 }
 .navbar{
 position: fixed;
@@ -248,3 +257,5 @@ width: 100%;
 }
 
 /* sections end */
+.tab-kev{border: 5px solid darkred; font-size: 25px; width: 100%;}
+.td-kev{border: 1px solid black; font-size: 25px;  }
